es-bs-base/scss/_nav.scss
// Base class
//
// Kickstart any navigation component with a set of style resets. Works with
// `<nav>`s, `<ul>`s or `<ol>`s.

.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.nav-link {
  display: block;
  padding: $nav-link-padding-y $nav-link-padding-x;
  text-decoration: if($link-decoration == none, null, none);

  @include hover-focus() {
    text-decoration: none;
  }

  // Disabled state lightens text
  &.disabled {
    color: $nav-link-disabled-color;
    pointer-events: none;
    cursor: default;
  }
}

//
// Tabs
//

.nav-tabs {
  border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;

  .nav-link {
    margin-bottom: -$nav-tabs-border-width;
    border: $nav-tabs-border-width solid transparent;
    @include border-top-radius($nav-tabs-border-radius);

    @include hover-focus() {
      border-color: $nav-tabs-link-hover-border-color;
    }

    &.disabled {
      color: $nav-link-disabled-color;
      background-color: transparent;
      border-color: transparent;
    }
  }

  .nav-link.active,
  .nav-item.show .nav-link {
    color: $nav-tabs-link-active-color;
    background-color: $nav-tabs-link-active-bg;
    border-color: $nav-tabs-link-active-border-color;
  }

  .dropdown-menu {
    // Make dropdown border overlap tab border
    margin-top: -$nav-tabs-border-width;
    // Remove the top rounded corners here since there is a hard edge above the menu
    @include border-top-radius(0);
  }
}


//
// Pills
//

.nav-pills {
  .nav-link {
    @include border-radius($nav-pills-border-radius);
  }

  .nav-link.active,
  .show > .nav-link {
    color: $nav-pills-link-active-color;
    background-color: $nav-pills-link-active-bg;
  }
}


//
// Justified variants
//

.nav-fill {
  > .nav-link,
  .nav-item {
    flex: 1 1 auto;
    text-align: center;
  }
}

.nav-justified {
  > .nav-link,
  .nav-item {
    flex-basis: 0;
    flex-grow: 1;
    text-align: center;
  }
}


// Tabbable tabs
//
// Hide tabbable panes to start, show them when `.active`

.tab-content {
  > .tab-pane {
    display: none;
  }
  > .active {
    display: block;
  }
}

//
// EnergySage Global Navigation
//
@media only screen and (min-width: 992px) {
  // Desktop overlay that is displayed on navbar hovers
  .content-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(64, 64, 64, .45);
    display: none;
}
}

.nav-es-global {
  // Hide the default BS4 expansion indicator
  .dropdown-toggle::after {
    content: none;
  }

  // Hide elements only needed for the mobile navigation
  .dropdown-label, .menu-checkbox, .menu-header, .menu-toggle {
    display: none;
  }

  // On Desktop a hovers display the dropdowns
  @media only screen and (min-width: 992px) {
    // Allow dropdown content to take up the full width of the page
    .dropdown-full-page {
      position: static;
    }

    // Full expand top level nav's topics section
    .dropdown-menu-full-page {
      top: 45%;
      width: 100%;
    }

    // Show dropdown on nav-item hover in desktop view
    .nav-item:hover .dropdown-menu{
      display: block;
    }

    // Place EnergyTips topic in a row instead of a column on desktop dropdown
    .topic-group {
      float: left;
    }
  }

  // A lot of custom styles for the mobile navigation menu
  @media only screen and (max-width: 992px) {
    // Force navigation items to align to the top and avoid conflict with other components on the page
    .navbar-collapse {
      align-items: start;
      z-index: 1;
    }
    // Allow the dropdowns to overlap each other
    .dropdown {
      position: unset;
    }
    // Position the menu at the top (leave some room for the header -- this seems hacky, could we set this to top:0?)
    .dropdown-menu {
        top: 50px;
    }
    // Hide the desktop dropdown toggle because mobile uses the labels as toggles
    .dropdown-toggle {
        display: none;
    }
    // Style the label as a proper tappable block target
    .dropdown-label {
        cursor: pointer;
        display: block;
    }
    // Add an indicator that a submenu exists (this is a place holder)
    .dropdown-label::after {
        content: "▶️";
    }

    // Style the menu for mobile navigation bit but use translate to keep it off screen
    .menu {
        background: #fff;
        flex-direction: column;
        height: 100%;
        left: 0;
        min-height: 100vh;
        position: absolute;
        top: 0;
        transform: translate3d(-100%, 0, 0);
        transition: transform 0.2s;
        width: 100%;
    }

    // Avoid top level nav's subtopics level menu from laying on its topic level menu
    .submenu {
      position: fixed;
      z-index: 2;
    }

    // The menu after any checked checkboxes is translated on screen
    .menu-checkbox:checked + .menu {
        transform: translate3d(0, 0, 0);
    }

    // The menu header
    .menu-header {
        background-color: #ccc;
        display: flex;
        height: 40px;
        width: 100%;
    }

    // This is a generic placeholder button for open/close/back in the mobile menu
    .menu-toggle {
        background-color: #098312;
        cursor: pointer;
        display: block;
        height: 40px;
        width: 40px;
    }

    // Override BS4 defaults for consistency
    .menu {
      ul, li {
        border: none;
        display: block;
        width: 100%;
      }
    }
  }
}

